test/wasm_test_suite.expected
==== core/elem.wast ====
File "wasm-test-suite/core/elem.wast", line 1061, characters 25-26:
Error: The type index 0 is not bound.
 1061 |     (call_indirect (type 0) (local.get 0)))
                                 ^

==== core/exceptions/tag.wast ====
Validation should have failed (non-empty tag result type):
  (module (tag (result i32)))
Validation should have failed (non-empty tag result type):
  (module (import "" "" (tag (result i32))))
Validation should have failed (non-empty tag result type):
  (module (tag (result i32)))
Validation should have failed (non-empty tag result type):
  (module (import "" "" (tag (result i32))))
==== core/func.wast ====
File "wasm-test-suite/core/func.wast", line 428, characters 25-26:
Error: The type index 1 is not bound.
  428 |   (func $void->f64 (type 1) (f64.const 0))  ;; (result f64)
                                 ^

==== core/stack.wast ====
Fatal error: exception Invalid_argument("index out of bounds")
